Require JDK 25 for building (but keep the Java 17 baseline)